tests/fail/infix_operator.tox
fn main() {
    let a = "a";
    let b = "b";
    a + b = "value"; //error: Not a valid assingment target
}